--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/src/assets/my_logo.jpg"/>
+    <link rel="icon" type="image/jpg" href="/src/assets/my_icon.jpg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Myo Myat Zaw</title>
+    <title>NEXTPARTS</title>
   </head>
-  <body>
+  <body class="">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
